--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
   <meta name="description" content="description here">
   <meta name="keywords" content="keywords,here">
   <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
-  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=font1|font2|etc" type="text/css">
-  <link rel="stylesheet" href="stylesheet.css" type="text/css">
+  <link rel="stylesheet" href="styles.scss" type="text/scss">
   </head>
   <body>
-    <div class="header"></div>
+    <div class="header">
+      <h1>Portfolio</h1>
+    </div>
     <div class="main-container">
-      
+
     </div>
     <div class="footer"></div>
   </body>
