--- a/index.html
+++ b/index.html
@@ -3,19 +3,21 @@
   <head>
     <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>title</title>
+    <title>Brad Mortensen</title>
   <meta name="author" content="name">
   <meta name="description" content="description here">
   <meta name="keywords" content="keywords,here">
   <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
-  <link rel="stylesheet" href="styles.scss" type="text/scss">
+  <link rel="stylesheet" href="./css/styles.css" type="text/css">
   </head>
   <body>
     <div class="header">
-      <h1>Portfolio</h1>
+      <h1>Brad Mortensen</h1>
+      <p class="intro">I'm da best you eva seent.</p>
     </div>
     <div class="main-container">
-
+      <div class="projects"><h2>My Projects</h2></div>
+      <div class="skills"><h2>My Skills</h2></div>
     </div>
     <div class="footer"></div>
   </body>
