--- a/index.html
+++ b/index.html
@@ -1,24 +1,37 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
+
+<head>
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Brad Mortensen</title>
+  <title>Brad Mortensen</title>
   <meta name="author" content="name">
   <meta name="description" content="description here">
   <meta name="keywords" content="keywords,here">
   <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
   <link rel="stylesheet" href="./css/styles.css" type="text/css">
-  </head>
-  <body>
-    <div class="header">
-      <h1>Brad Mortensen</h1>
-      <p class="intro">I'm da best you eva seent.</p>
+</head>
+
+<body>
+  <div class="header">
+    <h1>Brad Mortensen</h1>
+    <p class="intro">I'm da best you eva seent.</p>
+  </div>
+  <div class="main-container">
+    <div class="projects">
+      <h2 class="projects-header">My Projects</h2>
+      <div class="projects-container"></div>
     </div>
-    <div class="main-container">
-      <div class="projects"><h2>My Projects</h2></div>
-      <div class="skills"><h2>My Skills</h2></div>
+    <div class="skills">
+      <h2 class="skills-header">My Skills</h2>
+      <div class="skills-container"></div>
     </div>
-    <div class="footer"></div>
-  </body>
+    <div class="contact">
+      <h2 class="contact-header">Contact Me</h2>
+      <div class="contact-container"></div>
+    </div>
+  </div>
+  <div class="footer"></div>
+</body>
+
 </html>
