--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
       <div class="contact-container"></div>
     </div>
   </div>
-  <div class="footer"></div>
+  <div class="footer">
+    <p>2019 © Brad Mortensen</p>
+  </div>
 </body>
 
 </html>
