--- a/index.html
+++ b/index.html
@@ -17,14 +17,15 @@
   <div class="header">
     <h1>Brad Mortensen</h1>
     <p class="intro">I'm da best you eva seent.</p>
+    <img src="assets/two-down-arrows.svg" alt="scroll-arrow" />
   </div>
   <div class="main-container">
     <div class="projects">
-      <h2 class="projects-header">My Projects</h2>
+      <h2 class="projects-header">Projects</h2>
       <div class="projects-container"></div>
     </div>
     <div class="skills">
-      <h2 class="skills-header">My Skills</h2>
+      <h2 class="skills-header">Skills</h2>
       <div class="skills-container"></div>
     </div>
     <div class="contact">
@@ -33,6 +34,10 @@
     </div>
   </div>
   <div class="footer">
+    <div>Icon made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a
+        href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a
+        href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
+    </div>
     <p>2019 © Brad Mortensen</p>
   </div>
 </body>
