--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 <body>
   <div class="header">
-    <h1>Brad Mortensen</h1>
+    <h1 class="main-header">Brad Mortensen</h1>
     <p class="intro">I'm da best you eva seent.</p>
-    <img src="assets/two-down-arrows.svg" alt="scroll-arrow" />
+    <img id="scroller"src="assets/two-down-arrows.svg" alt="scroll-arrow" />
   </div>
   <div class="main-container">
     <div class="projects">
@@ -34,12 +34,13 @@
     </div>
   </div>
   <div class="footer">
-    <div>Icon made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a
+    <div class="icon-credit">Icon made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a
         href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a
         href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
     </div>
     <p>2019 © Brad Mortensen</p>
   </div>
+  <script src="index.js"></script>
 </body>
 
 </html>
