--- a/index.html
+++ b/index.html
@@ -17,30 +17,39 @@
   <div class="header">
     <h1 class="main-header">Brad Mortensen</h1>
     <p class="intro">I'm da best you eva seent.</p>
-    <img id="scroller"src="assets/two-down-arrows.svg" alt="scroll-arrow" />
+    <img id="scroller" src="assets/two-down-arrows.svg" alt="scroll-arrow" />
   </div>
   <div class="main-container">
     <div class="projects">
       <h2 class="projects-header">Projects</h2>
-      <div class="projects-container"></div>
+      <div class="projects-container">
+        <a href="https://bonafind.netlify.com/" target="_blank">Bonafind<img class="gif bonafind"
+            src="https://media.giphy.com/media/nqCQmp53eEC70dLsFL/giphy.gif" /></a>
+        <a href="https://notes-vue.herokuapp.com/" target="_blank">Lambda Notes<img class="gif notes-vue"
+            src="https://media.giphy.com/media/LpRByBHOfpAUEwUYBp/giphy.gif" /></a>
+        <a href="https://notes-vue.herokuapp.com/" target="_blank">Lambda Notes<img class="gif notes-vue"
+            src="https://media.giphy.com/media/LpRByBHOfpAUEwUYBp/giphy.gif" /></a>
+        <a href="https://bonafind.netlify.com/" target="_blank">Bonafind<img class="gif bonafind"
+            src="https://media.giphy.com/media/nqCQmp53eEC70dLsFL/giphy.gif" /></a>
+      </div>
+      <div class="skills">
+        <h2 class="skills-header">Skills</h2>
+        <div class="skills-container"></div>
+      </div>
+      <div class="contact">
+        <h2 class="contact-header">Contact Me</h2>
+        <div class="contact-container"></div>
+      </div>
     </div>
-    <div class="skills">
-      <h2 class="skills-header">Skills</h2>
-      <div class="skills-container"></div>
+    <div class="footer">
+      <div class="icon-credit">Icon made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a
+          href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a
+          href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0
+          BY</a>
+      </div>
+      <p>2019 © Brad Mortensen</p>
     </div>
-    <div class="contact">
-      <h2 class="contact-header">Contact Me</h2>
-      <div class="contact-container"></div>
-    </div>
-  </div>
-  <div class="footer">
-    <div class="icon-credit">Icon made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a
-        href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a
-        href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
-    </div>
-    <p>2019 © Brad Mortensen</p>
-  </div>
-  <script src="index.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
