updates skilss to technologies

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         <a href="https://bonafind.netlify.com/" target="_blank">Bonafind<img class="gif bonafind"
             src="https://media.giphy.com/media/nqCQmp53eEC70dLsFL/giphy.gif" /></a>
       </div>
-      <div class="skills">
-        <h2 class="skills-header">Skills</h2>
-        <div class="skills-container"></div>
+      <div class="technologies">
+        <h2 class="technologies-header">Technologies</h2>
+        <div class="technologies-container"></div>
       </div>
       <div class="contact">
         <h2 class="contact-header">Contact Me</h2>
