adds a bunch of assets

--- a/index.html
+++ b/index.html
@@ -34,11 +34,23 @@
       </div>
       <div class="technologies">
         <h2 class="technologies-header">Technologies</h2>
-        <div class="technologies-container"></div>
+        <div class="technologies-container">
+          <a><img src="assets/javascript.svg" /></a>
+          <a><img src="assets/react-1.svg" /></a>
+          <a><img src="assets/python-5.svg" /></a>
+          <a><img src="assets/vue-9.svg" /></a>
+          <a><img src="assets/nodejs-1.svg" /></a>
+          <a><img src="assets/postgresql.svg" /></a>
+        </div>
       </div>
       <div class="contact">
-        <h2 class="contact-header">Contact Me</h2>
-        <div class="contact-container"></div>
+        <h2 class="contact-header">Contact/Hire Me</h2>
+        <div class="contact-container">
+          <a href="https://github.com/brad-mortensen" target="_blank"><img src="assets/github-1.svg" /></a>
+          <a href="https://www.linkedin.com/in/bradmmortensen/" target="_blank"><img src="assets/linkedin.svg" /></a>
+          <a href="mailto: bradmmortensen@gmail.com" target="_blank"><img src="assets/gmail-icon.svg" /></a>
+          <a href="whttps://twitter.com/bradmmortensen"><img src="assets/twitter.svg" /></a>
+        </div>
       </div>
     </div>
     <div class="footer">
