adds too many svgs

--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
           <a><img src="assets/vue-9.svg" /></a>
           <a><img src="assets/nodejs-1.svg" /></a>
           <a><img src="assets/postgresql.svg" /></a>
+          <a><img src="assets/npm.svg" /></a>
+          <a><img src="assets/sqlite.svg" /></a>
+          <a><img src="assets/visual-studio-code.svg" /></a>
+          <a><img src="assets/yarn.svg" /></a>
         </div>
       </div>
       <div class="contact">
