--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         </div>
       </div>
     </div>
+  </div>  
     <div class="footer">
       <div class="icon-credit">Icon made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a
           href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a
