fixing scroll buttons

--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
 </head>
 
 <body>
+  <div class="scroll-buttons">
+    <img id="up-scroller" src="assets/angle-double-up.svg" alt="scroll-arrow" />
+    <img id="down-scroller" src="assets/angle-double-down.svg" alt="scroll-arrow" />
+  </div>
   <div class="header">
     <h1 class="main-header">Brad Mortensen</h1>
     <p class="intro">I'm da best you eva seent.</p>
-    <img id="scroller" src="assets/two-down-arrows.svg" alt="scroll-arrow" />
   </div>
   <div class="main-container">
     <div class="projects">
@@ -57,16 +60,16 @@
         </div>
       </div>
     </div>
-  </div>  
-    <div class="footer">
-      <div class="icon-credit">Icon made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a
-          href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a
-          href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0
-          BY</a>
-      </div>
-      <p>2019 © Brad Mortensen</p>
+  </div>
+  <div class="footer">
+    <div class="icon-credit">Icon made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a
+        href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a
+        href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0
+        BY</a>
     </div>
-    <script src="index.js"></script>
+    <p>2019 © Brad Mortensen</p>
+  </div>
+  <script src="index.js"></script>
 </body>
 
 </html>
