--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h1 class="main-header">Brad Mortensen</h1>
     <p class="intro">I'm da best you eva seent.</p>
   </div>
-  <div class="main-container">
+  <div class="main-container" id="main-container">
     <div class="projects">
       <h2 class="projects-header">Projects</h2>
       <div class="projects-container">
