updates twitter link

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <a href="https://github.com/brad-mortensen" target="_blank"><img src="assets/github-1.svg" /></a>
           <a href="https://www.linkedin.com/in/bradmmortensen/" target="_blank"><img src="assets/linkedin.svg" /></a>
           <a href="mailto: bradmmortensen@gmail.com" target="_blank"><img src="assets/gmail-icon.svg" /></a>
-          <a href="whttps://twitter.com/bradmmortensen"><img src="assets/twitter.svg" /></a>
+          <a href="https://twitter.com/bradmmortensen"><img src="assets/twitter.svg" /></a>
         </div>
       </div>
     </div>
