--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </div>
   <div class="header">
     <h1 class="main-header">Brad Mortensen</h1>
-    <p class="intro">I'm da best you eva seent.</p>
+    <p class="intro">Software Developer</p>
   </div>
   <div class="main-container" id="main-container">
     <div class="projects">
