--- a/index.html
+++ b/index.html
@@ -24,49 +24,57 @@
     <div class="overlay"></div>
   </div>
   <div class="main-container" id="main-container">
-    <div class="projects">
-      <!-- <h2 class="projects-header">Projects</h2> -->
-      <div class="projects-container">
-        <div class="description top"></div>
-        <div class="img-container bonafind">
-          <div class="inner-text">
-            <h4 class="inner-header">Bonafind</h4>
-            <p class="inner-description">Business Reviews App</p>
-          </div>
-        </div>
-        <div class="img-container notes-vue">
-          <div class="inner-text">
-            <h4 class="inner-header">Vue Notes</h4>
-            <p class="inner-description">Built with Vue.js</p>
-          </div>
-        </div>
-        <div class="description bottom"></div>
-      </div>
-      <div class="technologies">
-        <h2 class="technologies-header">Technologies</h2>
-        <div class="technologies-container">
-          <a><img src="assets/javascript.svg" /></a>
-          <a><img src="assets/react-1.svg" /></a>
-          <a><img src="assets/python-5.svg" /></a>
-          <a><img src="assets/vue-9.svg" /></a>
-          <a><img src="assets/nodejs-1.svg" /></a>
-          <a><img src="assets/postgresql.svg" /></a>
-          <a><img src="assets/npm.svg" /></a>
-          <a><img src="assets/sqlite.svg" /></a>
-          <a><img src="assets/visual-studio-code.svg" /></a>
-          <a><img src="assets/yarn.svg" /></a>
+    <div class="projects-container">
+      <div class="img-container a bonafind">
+        <div class="img-text blue">
+          <h4 class="inner-header">Bonafind</h4>
+          <p class="inner-description">Business Reviews App</p>
         </div>
       </div>
-      <div class="contact">
-        <h2 class="contact-header">Contact/Hire Me</h2>
-        <div class="contact-container">
-          <a href="https://github.com/brad-mortensen" target="_blank"><img src="assets/github-1.svg" /></a>
-          <a href="https://www.linkedin.com/in/bradmmortensen/" target="_blank"><img src="assets/linkedin.svg" /></a>
-          <a href="mailto: bradmmortensen@gmail.com" target="_blank"><img src="assets/gmail-icon.svg" /></a>
-          <a href="https://twitter.com/bradmmortensen"><img src="assets/twitter.svg" /></a>
+      <div class="img-container b django-blog">
+        <div class="img-text purple">
+          <h4 class="inner-header">Bloggo</h4>
+          <p class="inner-description">Django Blog Site</p>
+        </div>
+      </div>
+      <div class="img-container b bonafind">
+        <div class="img-text red">
+          <h4 class="inner-header">Bonafind</h4>
+          <p class="inner-description">Business Reviews App</p>
+        </div>
+      </div>
+      <div class="img-container a notes-vue">
+        <div class="img-text orange">
+          <h4 class="inner-header">Vue Notes</h4>
+          <p class="inner-description">Built with Vue.js</p>
         </div>
       </div>
     </div>
+    <div class="technologies">
+      <h2 class="technologies-header">Technologies</h2>
+      <div class="technologies-container">
+        <a><img src="assets/javascript.svg" /></a>
+        <a><img src="assets/react-1.svg" /></a>
+        <a><img src="assets/python-5.svg" /></a>
+        <a><img src="assets/vue-9.svg" /></a>
+        <a><img src="assets/nodejs-1.svg" /></a>
+        <a><img src="assets/postgresql.svg" /></a>
+        <a><img src="assets/npm.svg" /></a>
+        <a><img src="assets/sqlite.svg" /></a>
+        <a><img src="assets/visual-studio-code.svg" /></a>
+        <a><img src="assets/yarn.svg" /></a>
+      </div>
+    </div>
+    <div class="contact">
+      <h2 class="contact-header">Contact/Hire Me</h2>
+      <div class="contact-container">
+        <a href="https://github.com/brad-mortensen" target="_blank"><img src="assets/github-1.svg" /></a>
+        <a href="https://www.linkedin.com/in/bradmmortensen/" target="_blank"><img src="assets/linkedin.svg" /></a>
+        <a href="mailto: bradmmortensen@gmail.com" target="_blank"><img src="assets/gmail-icon.svg" /></a>
+        <a href="https://twitter.com/bradmmortensen"><img src="assets/twitter.svg" /></a>
+      </div>
+    </div>
+  </div>
   </div>
   <div class="footer">
     <p>2019 © Brad Mortensen</p>
