--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="keywords" content="keywords,here">
   <link rel="shortcut icon" href="./assets/favicon.png" type="image/vnd.microsoft.icon">
   <link rel="stylesheet" href="./css/styles.css" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Open+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Cardo" rel="stylesheet">
 </head>
 
 <body>
